--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "supertest": "^6.3.0"
   },
   "devDependencies": {
     "jest": "^29.2.1",
